--- a/src/Polly.Contrib.MutableBulkheadPolicy/Polly.Contrib.MutableBulkheadPolicy.csproj
+++ b/src/Polly.Contrib.MutableBulkheadPolicy/Polly.Contrib.MutableBulkheadPolicy.csproj
@@ -4,19 +4,23 @@
     <TargetFrameworks>netstandard1.1;netstandard2.0</TargetFrameworks>
     <AssemblyName>Polly.Contrib.MutableBulkheadPolicy</AssemblyName>
     <RootNamespace>Polly.Contrib.MutableBulkheadPolicy</RootNamespace>
-    <Version>0.1.0</Version>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <InformationalVersion>0.1.0.0</InformationalVersion>
-    <PackageVersion>0.1.0</PackageVersion>
     <Company>App vNext</Company>
     <Copyright>Copyright (c) 2019, Microsoft, App vNext and contributors</Copyright>
     <Description>Polly.Contrib.MutableMutableBulkheadPolicy is a custom Polly policy to perform mutable bulkhead isolation while allowing parallelization parameters to be modified.</Description>
     <DefaultLanguage>en-US</DefaultLanguage>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Authors>App vNext</Authors>
+    <Authors>Eric Huang, Microsoft, App vNext</Authors>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <Version>1.0.0-bumptov100-0001</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0.0</InformationalVersion>
+    <PackageVersion>1.0.0-bumptov100-0001</PackageVersion>
+  </PropertyGroup>
+
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DebugType>full</DebugType>
   </PropertyGroup>
